COLOR: hex code

--- a/Afficher/CSS/overriding.css
+++ b/Afficher/CSS/overriding.css
@@ -1,7 +1,7 @@
 /* -- Overriding Bootstrap classics -- */
 body {
   background-image: url('/Afficher/CSS/Images/Background.png');
-  background-color: #307AC3;
+  background-color: #307ac3;
   background-size: 100%;
 }
 
